update examples/gui/README.md for JDK_JAVA_OPTIONS message